# flutter-wipe

./: Cargo.toml  LICENSE  README.md  flutter-wipe.toml.example  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
