
[package]
name = "flutter-wipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
walkdir = "2.5.0"
indicatif = "0.17.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
colored = "3.0.0"
fs_extra = "1.3.0"
human_bytes = "0.4.3"
toml = "0.8.19"
